--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
                     <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3" onclick="window.location.href='./time/timetable.html'">
                         Concert Card
                     </button>
-                    <button type="button"
-                        class="btn btn-outline-secondary btn-lg px-4">Contact
+                    <button type="button" class="btn btn-outline-secondary btn-lg px-4" onclick="window.location.href='https://www.facebook.com/threemandownofficial'">Contact
                         US</button>
                 </div>
             </div>
