--- a/Home page/index.html
+++ b/Home page/index.html
@@ -79,7 +79,7 @@
                     you really love me.</p>
                 <div
                     class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-                    <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3" onclick="window.location.href='./time/timetable.html'">
+                    <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3" onclick="window.location.href='/time/timetable.html'">
                         Concert Card
                     </button>
                     <button type="button" class="btn btn-outline-secondary btn-lg px-4" onclick="window.location.href='https://www.facebook.com/threemandownofficial'">Contact
