--- a/Home page/music/music.html
+++ b/Home page/music/music.html
@@ -250,7 +250,7 @@
 
         <div class="controls">
             <div class="song-info">
-                <img src="./img/logo.png" alt id="song-thumbnail">
+                <img src="/Home page/img/logo.png" alt id="song-thumbnail">
                 <div>
                     <p id="song-title">Select a song</p>
                     <p id="song-artist">Artist</p>
@@ -272,43 +272,43 @@
             title: "ไม่ให้ไป",
             artist: "Three Man Down",
             url: "https://www.youtube.com/embed/4Ef7jOl8Fw4?controls=1&autoplay=1",
-            thumbnail: "./music/nogo.png"
+            thumbnail: "./nogo.png"
         },
         {
             title: "เปิดตัวเขา",
             artist: "Three Man Down",
             url: "https://www.youtube.com/embed/XnxWDyyQj18?controls=1&autoplay=1",
-            thumbnail: "./music/openfan.jpg"
+            thumbnail: "./openfan.jpg"
         },
         {
             title: "เมา",
             artist: "Three Man Down",
             url: "https://www.youtube.com/embed/hV9w2KQn26U?controls=1&autoplay=1",
-            thumbnail: "./music/drunk.jpg"
+            thumbnail: "./drunk.jpg"
         },
         {
             title: "ไหนบอกเลิกแล้ว",
             artist: "Three Man Down",
             url: "https://www.youtube.com/embed/E310t-eXfMU?controls=1&autoplay=1",
-            thumbnail: "./music/naibok.jpg"
+            thumbnail: "./naibok.jpg"
         },
         {
             title: "คนใหม่ (Someone New)",
             artist: "Three Man Down",
             url: "https://www.youtube.com/embed/ptIZhaT_KOo?controls=1&autoplay=1",
-            thumbnail: "./music/some.jpg"
+            thumbnail: "./some.jpg"
         },
         {
             title: "เด็กเกินไป",
             artist: "Three Man Down",
             url: "https://www.youtube.com/embed/SCaVrRWSGic?controls=1&autoplay=1",
-            thumbnail: "./music/dek.jpg"
+            thumbnail: "./dek.jpg"
         },
         {
             title: "ไม่อยากชิน",
             artist: "Three Man Down",
             url: "https://www.youtube.com/embed/v45ZIE7fvKU?controls=1&autoplay=1",
-            thumbnail: "./music/sddefault.jpg"
+            thumbnail: "./sddefault.jpg"
         }
         // Add more songs as needed
     ];
