--- a/Home page/time/timetable.html
+++ b/Home page/time/timetable.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="item-container">
             <div class="img-container">
-                <img src="img/basic.jpg" alt="Event image">
+                <img src="./img/basic.jpg" alt="Event image">
             </div>
 
             <div class="body-container">
@@ -46,7 +46,7 @@
 
         <div class="item-container">
             <div class="img-container">
-                <img src="img/siracha.jpg" alt="Event image">
+                <img src="./img/siracha.jpg" alt="Event image">
             </div>
 
             <div class="body-container">
@@ -80,7 +80,7 @@
 
         <div class="item-container">
             <div class="img-container">
-                <img src="img/hatyai.jpg" alt="Event image">
+                <img src="./img/hatyai.jpg" alt="Event image">
             </div>
 
             <div class="body-container">
@@ -114,7 +114,7 @@
 
         <div class="item-container">
             <div class="img-container">
-                <img src="img/sold.jpg" alt="Event image">
+                <img src="./img/sold.jpg" alt="Event image">
             </div>
 
             <div class="body-container">
