--- a/Home page/index.html
+++ b/Home page/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="overflow-hidden" style="max-height: 30vh;">
                 <div class="container px-5">
-                    <img src="/img/logo.png"
+                    <img src="./img/logo.png"
                         class="img-fluid border rounded-3 shadow-lg mb-4"
                         alt="Example image" width="300" height="500"
                         loading="lazy">
@@ -103,7 +103,7 @@
                 <div class="feature col">
                     <div
                         class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                        <img src="/img/music-note-list.svg" alt="" height="30">
+                        <img src="./img/music-note-list.svg" alt="" height="30">
                     </div>
                     <h3 class="fs-2 text-body-emphasis">Music Band</h3>
                     <p>The band has released songs periodically. Until they
@@ -117,7 +117,7 @@
                         "The Team Waits for You" and "Let's Go You"
                         respectively, but those songs were not as successful as
                         the band thought.</p>
-                    <a href="/music/music.html" class="icon-link">
+                    <a href="./music/music.html" class="icon-link">
                         Ream More
                         <svg class="bi"><use
                                 xlink:href="#chevron-right"></use></svg>
@@ -126,7 +126,7 @@
                 <div class="feature col">
                     <div
                         class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                        <img src="/img/clock-history.svg" alt="" height="30">
+                        <img src="./img/clock-history.svg" alt="" height="30">
                     </div>
                     <h3 class="fs-2 text-body-emphasis">History of the Band</h3>
                     <p>The band Three Man Down started as Kit who was entering
@@ -149,12 +149,12 @@
                 <div class="feature col">
                     <div
                         class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                        <img src="/img/music-note.svg" alt="" height="30">
+                        <img src="./img/music-note.svg" alt="" height="30">
                     </div>
                     <h3 class="fs-2 text-body-emphasis">Band Tour</h3>
                     <p>Three Man Down 'BASIC TOUR' big departure To meet
                         everyone in 4 regions of Thailand.</p>
-                    <a href="/time/timetable.html" class="icon-link">
+                    <a href="./time/timetable.html" class="icon-link">
                         Read More
                         <svg class="bi"><use
                                 xlink:href="#chevron-right"></use></svg>
@@ -168,13 +168,13 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/img/1.jpg" class="d-block w-100" alt="photo1">
+                <img src="./img/1.jpg" class="d-block w-100" alt="photo1">
               </div>
               <div class="carousel-item">
-                <img src="/img/5.jpg" height="680" class="d-block w-100" alt="photo2">
+                <img src="./img/5.jpg" height="680" class="d-block w-100" alt="photo2">
               </div>
               <div class="carousel-item">
-                <img src="/img/3.jpg" class="d-block w-100" alt="photo3">
+                <img src="./img/3.jpg" class="d-block w-100" alt="photo3">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
