--- a/Home page/index.html
+++ b/Home page/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="overflow-hidden" style="max-height: 30vh;">
                 <div class="container px-5">
-                    <img src="./img/logo.png"
+                    <img src="/Home page/img/logo.png"
                         class="img-fluid border rounded-3 shadow-lg mb-4"
                         alt="Example image" width="300" height="500"
                         loading="lazy">
@@ -103,7 +103,7 @@
                 <div class="feature col">
                     <div
                         class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                        <img src="./img/music-note-list.svg" alt="" height="30">
+                        <img src="/Home page/img/music-note-list.svg" alt="" height="30">
                     </div>
                     <h3 class="fs-2 text-body-emphasis">Music Band</h3>
                     <p>The band has released songs periodically. Until they
