--- a/Home page/index.html
+++ b/Home page/index.html
@@ -79,7 +79,7 @@
                     you really love me.</p>
                 <div
                     class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-                    <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3" onclick="window.location.href='/Home page/time/timetable.html'">
+                    <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3" onclick="window.location.href='./time/timetable.html'">
                         Concert Card
                     </button>
                     <button type="button" class="btn btn-outline-secondary btn-lg px-4" onclick="window.location.href='https://www.facebook.com/threemandownofficial'">Contact
@@ -103,7 +103,7 @@
                 <div class="feature col">
                     <div
                         class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                        <img src="/Home page/img/music-note-list.svg" alt="" height="30">
+                        <img src="./img/music-note-list.svg" alt="" height="30">
                     </div>
                     <h3 class="fs-2 text-body-emphasis">Music Band</h3>
                     <p>The band has released songs periodically. Until they
