--- a/Home page/music/music.html
+++ b/Home page/music/music.html
@@ -11,7 +11,7 @@
             <style>
                 body {
                     font-family: 'Itim', 'Courier New', Courier, monospace;
-                    background: linear-gradient(to right, #000000, #ffffff);
+                    background: linear-gradient(to right, #000000, #814747);
                     color: #d5e407;
                     margin: 0;
                     padding: 0;
@@ -250,7 +250,7 @@
 
         <div class="controls">
             <div class="song-info">
-                <img src="/Home page/img/logo.png" alt id="song-thumbnail">
+                <img src="./logo.png" alt id="song-thumbnail">
                 <div>
                     <p id="song-title">Select a song</p>
                     <p id="song-artist">Artist</p>
